--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.0-next.98",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
