--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/client": "^3.2.7",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
@@ -11,6 +12,7 @@
     "@types/react": "^16.14.1",
     "@types/react-dom": "^16.9.10",
     "autoprefixer": "^10.0.2",
+    "graphql": "^15.4.0",
     "postcss": "^8.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
