--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "postcss": "^8.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hook-form": "^6.11.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0-next.98",
     "tailwindcss": "^2.0.1",
