--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.19.6",
     "@types/react": "^16.14.1",
     "@types/react-dom": "^16.9.10",
+    "@types/react-router-dom": "^5.1.6",
     "autoprefixer": "^10.0.2",
     "graphql": "^15.4.0",
     "postcss": "^8.1.9",
