--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.14.1",
     "@types/react-dom": "^16.9.10",
     "@types/react-router-dom": "^5.1.6",
+    "apollo": "^2.31.1",
     "autoprefixer": "^10.0.2",
     "graphql": "^15.4.0",
     "postcss": "^8.1.9",
