--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^12.19.6",
     "@types/react": "^16.14.1",
     "@types/react-dom": "^16.9.10",
+    "@types/react-helmet": "^6.1.0",
     "@types/react-router-dom": "^5.1.6",
     "apollo": "^2.31.1",
     "autoprefixer": "^10.0.2",
@@ -18,6 +19,7 @@
     "postcss": "^8.1.9",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^6.11.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0-next.98",
