--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-router-dom": "^5.1.6",
     "apollo": "^2.31.1",
     "autoprefixer": "^10.0.2",
+    "cypress": "^6.0.1",
     "graphql": "^15.4.0",
     "postcss": "^8.1.9",
     "react": "^17.0.1",
