--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
+    "victory": "^35.4.2",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
