--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-helmet": "^6.1.0",
     "react-helmet-async": "^1.0.7",
     "react-hook-form": "^6.11.4",
+    "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0-next.98",
     "rimraf": "^3.0.2",
