--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-paypal-button-v2": "^2.6.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0-next.98",
+    "react-toastify": "^7.0.3",
     "rimraf": "^3.0.2",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
