--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "4.0.0-next.98",
     "react-toastify": "^7.0.3",
     "rimraf": "^3.0.2",
+    "subscriptions-transport-ws": "^0.9.18",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
     "victory": "^35.4.2",
