--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.2.2",
+    "@types/google-map-react": "^2.1.0",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.19.6",
     "@types/react": "^16.14.1",
@@ -19,6 +20,7 @@
     "apollo": "^2.31.1",
     "autoprefixer": "^10.0.2",
     "cypress": "^6.0.1",
+    "google-map-react": "^2.1.9",
     "graphql": "^15.4.0",
     "postcss": "^8.1.9",
     "react": "^17.0.1",
