--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
   },
   "devDependencies": {
     "@testing-library/cypress": "^7.0.2",
+    "@types/googlemaps": "^3.40.3",
     "mock-apollo-client": "^1.0.0"
   }
 }
