--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-router-dom": "^5.1.6",
     "apollo": "^2.31.1",
     "autoprefixer": "^10.0.2",
+    "cross-env": "^7.0.2",
     "cypress": "^6.0.1",
     "google-map-react": "^2.1.9",
     "graphql": "^15.4.0",
@@ -40,10 +41,12 @@
     "web-vitals": "^0.2.4"
   },
   "scripts": {
+    "tailwind:prodbuild": "cross-env NODE_ENV=production npm run tailwind:build",
     "tailwind:build": "tailwind build ./src/styles/tailwind.css -o ./src/styles/styles.css",
     "start": "npm run apollo:codegen & npm run tailwind:build & react-scripts start",
     "apollo:codegen": "rimraf src/__generated__ && apollo client:codegen src/__generated__ --target=typescript --outputFlat",
-    "build": "react-scripts build",
+    "build": "CI=false react-scripts build",
+    "prebuild": "npm run tailwind:prodbuild",
     "test": "react-scripts test",
     "test:coverage": "npm test -- --coverage --watchAll=false",
     "eject": "react-scripts eject"
